Require permissions, fix menu overflow

--- a/src/Pckg/Maestro/public/less/maestro.less
+++ b/src/Pckg/Maestro/public/less/maestro.less
@@ -120,7 +120,6 @@ body {
   float: left;
   height: 100%;
   left: 0;
-  overflow: hidden;
   padding-bottom: 10rem;
   padding-left: 0;
   padding-right: 0;
